<resources>
    <string name="app_name">CampusMoments</string>
    <string name="avatar_description">avatar</string>
    <string name="picture_description">picture</string>
    <string name="comment_description">comment</string>
    <string name="like_description">like number</string>
    <string name="favorite_description">favorite number</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_hint">请在此处输入标题</string>
    <string name="content_hint">请在此处输入正文</string>
    <string name="username_default">zheng-wa19</string>
    <string name="title_home">首页</string>
    <string name="title_topic">话题</string>
    <string name="title_add" />
    <string name="title_guide">导读</string>
    <string name="title_my">我的</string>
    <string name="default_moment_title">【圆明园游玩】</string>
    <string name="default_moment_text">今天下午去了圆明园，有很多花，湖里有很多鸳鸯天鹅鱼。春天的气息！</string>
    <string name="text_publish">发布</string>
    <string name="tab_layout">tablayout</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">不合法的用户名</string>
    <string name="invalid_password">密码至少需要6位字符</string>
    <string name="login_failed">"登录失败"</string>


    <!-- Toast -->
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_insert_link">Insert link</string>
    <string name="toast_format_clear">Format clear</string>


    <!-- Demo -->
    <string name="app_repo">https://github.com/mthli/Knife</string>

    <!-- Menu -->
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_github">GitHub</string>

    <!-- Dialog -->
    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">default</string>
    <string name="channel_description">用来发通知</string>
</resources>