<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_topic"
        android:icon="@drawable/ic_topic"
        android:title="@string/title_topic" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/ic_guide"
        android:title="@string/title_guide" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my"
        android:title="@string/title_my" />
</menu>