<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/avatar_description"
                android:src="@drawable/avatar_1"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="16dp"
                android:fontFamily="serif"
                android:gravity="center|start"
                android:text="@string/username_default"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal|italic" />

        </LinearLayout>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/title_hint"
            android:inputType="textMultiLine|text"
            android:maxLength="20"
            android:minHeight="32dp"
            android:text="@string/default_moment_title"
            android:textColor="#3A3A3A"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/content_hint"
            android:inputType="textMultiLine|text"
            android:maxLength="200"
            android:minHeight="32dp"
            android:text="@string/default_moment_text"
            android:textColor="#3A3A3A"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/pictureLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <GridView
                android:id="@+id/pictureGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/publish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_publish" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>