<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/avatar_description"
            android:src="@drawable/avatar_default" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3A3A3A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3A3A3A"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/pictureLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <GridView
            android:id="@+id/pictureGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/comment_description"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/commentCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#9E9E9E"
            android:textSize="16sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/like_description"
            android:src="@drawable/ic_like" />

        <TextView
            android:id="@+id/likeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#9E9E9E"
            android:textSize="16sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/favorite_description"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/favoriteCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="#9E9E9E"
            android:textSize="16sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>